 b@startuml

class CreateSharedBoardUI  {

}

class CreateSharedBoardController {

}

class SharedBoardRepository {

}

class SharedBoard {

}

CreateSharedBoardUI -down-> CreateSharedBoardController: uses the controller
CreateSharedBoardController --> SharedBoardRepository: uses the repository
CreateSharedBoardController --> SharedBoard: create

@enduml